--- a/sass/bold/_common.sass
+++ b/sass/bold/_common.sass
@@ -10,7 +10,7 @@ form
 
     + input[type=checkbox], + input[type=radio]
       margin-top: -1em
-    
+
       + label,
         margin-top: -1em
 
@@ -65,6 +65,14 @@ input, select, textarea
       + label
         clear: left
         float: left
+
+  &[type=color]
+    background-color: transparent
+    box-shadow: none
+    border: none
+    padding: 0
+    height: 2em
+    width: 2em
 
   &[type=radio]
     border-radius: 1em 0 0 1em
