--- a/sass/flat/_common.sass
+++ b/sass/flat/_common.sass
@@ -7,7 +7,7 @@ form
 
   p + input[type=checkbox], p + input[type=radio]
     margin-top: -1em
-    
+
     + label,
       margin-top: -1em
 
@@ -90,6 +90,14 @@ input
 
   &[type=checkbox]
     border-radius: 0
+
+  &[type=color]
+    background-color: transparent
+    box-shadow: none
+    border: none
+    padding: 0
+    height: 2em
+    width: 2em
 
   &[type=radio]
     border-radius: 0.5em
