--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
   <head>
     <link href="/static/css/style.css" rel="stylesheet" />
     <link href="/static/css/themes/{{ theme }}.css" rel="stylesheet" />
+    <script type="text/javascript" src="/static/plainform.js"></script>
   </head>
   <body>
     <nav>
